[FIX] FolderService 수정